fixed typewriter overflow

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -24,7 +24,7 @@
 /* Typewriter ---------------------------------------------------------------- */
 
 .homeTypewriter{
-  @apply pt-6 text-2xl lg:text-3xl break-words max-w-[500px];
+  @apply pt-6 text-2xl lg:text-3xl break-words max-w-[500px] h-44;
 }
 
 .homeTypewriter span{
